<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/Opcionestxt"
        android:title="@string/Opcionestxt">

        <menu>
            <item
                android:id="@+id/InicioCliente"
                android:title="@string/InicioCliente"
                android:icon="@drawable/admin_panel"/>
        </menu>


    </item>
    <item
        android:id="@+id/MasOpciones"
        android:title="@string/MasOpcionestxt">

        <menu>
            <item
                android:id="@+id/Login"
                android:title="@string/Login"
                android:icon="@drawable/login_item"/>
            <item
                android:id="@+id/AcercaDe"
                android:title="@string/AcercaDe"
                android:icon="@drawable/acerca"/>
            <item
                android:id="@+id/Compartir"
                android:title="@string/Compartir"
                android:icon="@drawable/compartir"/>
            <item
                android:id="@+id/Maps"
                android:title="@string/Maps"
                android:icon="@drawable/mapa_item"/>

        </menu>

    </item>


</menu>