<?xml version="1.0" encoding="utf-8"?>
    <menu
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="navigation_view">

        <group
            android:checkableBehavior="single">

            <item
                android:id="@+id/InicioAdmin"
                android:title="@string/InicioAdmin"
                android:icon="@drawable/admin_panel"
                />
            <item
                android:id="@+id/PerfilAdmin"
                android:title="@string/PerfilAdmin"
                android:icon="@drawable/perfil_icon"

                />
            <item
                android:id="@+id/RegistrarAdmin"
                android:title="@string/RegistrarAdmin"
                android:icon="@drawable/registrar_icon"
                />
            <item
                android:id="@+id/ListarAdmin"
                android:title="@string/ListarAdmin"
                android:icon="@drawable/lista_icon"

                />
            <item
                android:id="@+id/Salir"
                android:title="@string/Salir"
                android:icon="@drawable/cerrar_icon"
                />

        </group>

    </menu>
